--- a/src/css/index2.css
+++ b/src/css/index2.css
@@ -11,8 +11,6 @@
 body{
     font-family: 'Varela Round', sans-serif;
     background: #F0F6F6;
-    
-    /* color: #FF8552; */
     color: black;
 }
 
@@ -119,11 +117,26 @@ img{
 .color{
     margin-left: auto;
     margin-right: auto;
-    display: flex;
+    display: grid;
     justify-content: center;
-    column-gap: 10px;
+    column-gap: 30px;
+    grid-template-columns: repeat(4,1fr);
+    max-width: 700px;
 }
 
+.color a{
+    width: 100%;
+}
+
+.color img{
+    width: 100%;
+    height: 400px;
+    object-fit: cover;
+    border-radius: 2%;
+    overflow:visible;
+}
+
+/* Start of images on homepage */
 
 .Icons{
     margin-top: 80px;
@@ -131,11 +144,10 @@ img{
     margin-right: auto;
 }
 
-.One{
+/* .One{
     margin-right: 15px;
-    
-}
-.Two{
+} */
+/* .Two{
     margin-right: 15px;
 }
 
@@ -144,7 +156,7 @@ img{
 }
 .Four{
     margin-right: 15px;
-}
+} */
 
 .Desc{
     list-style: none;
