--- a/src/css/register.css
+++ b/src/css/register.css
@@ -759,5 +759,25 @@ h3{
     text-decoration: underline;
 }
 
+/* start of Logged In user Styles */
+
+.menu-item {
+    font-size: 16px;
+    display: flex;
+    justify-content: left;
+    transition: color 0.5s; 
+  }
+  
+  .menu-item:hover {
+    color: rgb(223, 186, 36);
+  }
+  
+  .LoggedIn{
+    margin-right: 16px;
+  }
+
+  .LoggedIn:hover{
+    color: rgb(223, 186, 36);
+  }
 
 
